--- a/html/registrar_usuario.html
+++ b/html/registrar_usuario.html
@@ -9,15 +9,18 @@
     <title>Inicio</title>
 
     <!-- Archivos CSS -->
-    <link rel="stylesheet" type="text/css" href="../css/Bootstrap/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="../css/estilo.css" rel="stylesheet">
     <link type="text/css" href="../alertifyjs/css/alertify.min.css" rel="stylesheet">
     <link type="text/css" href="../alertifyjs/css/themes/default.min.css" rel="stylesheet">
 
-     <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js"></script>
     
     <script type="text/javascript" src="../js/registrar.js?201f5fr1"></script>
-    <script type="text/javascript" src="../css/Bootstrap/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../alertifyjs/alertify.min.js"></script>
   </head>
 
